# xComp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_BUILD.md  RELEASING.md  build.sh  license.txt
.github/workflows/: linux-build.yml  release-macos.yml  windows-build.yml
apps/: CMakeLists.txt  DebugDir.vcxproj.user.in
apps/app_common/: CMakeLists.txt  stdafx.h
apps/deploy_base/: deploy_macos.sh  history.txt  license.txt  run_linux.sh  run_macos.sh  rundev.sh  xcomp_installer.nsi
apps/resources/: xcomp_icon.icns  xcomp_resources.rc
apps/src_common/: AppBaseConfig.cpp  AppBaseConfig.h  BCUIUT_OrdersMap.h  BC_Utils.cpp  BC_Utils.h  CmdLineUtils.h  DateMacro.h  DisplayBase.cpp  DisplayBase.h  DisplayConfigWin.cpp  DisplayConfigWin.h  GTVersions.h  IMUI_AboutDialog.cpp  IMUI_AboutDialog.h  IntervalCall.h  RU_HTMLTableMaker.h  RU_IMUITableMaker.h  RU_TableMakerBase.h
apps/xcomp/: CMakeLists.txt
apps/xcomp/src/: BLBase.h  BLUIBase.h  ConfigWin.cpp  ConfigWin.h  ImageSystem.cpp  ImageSystem.h  ImageSystemOCIO.cpp  ImageSystemOCIO.h  XCConfig.cpp  XCConfig.h  XComp.cpp  XComp.h  XCompUI.cpp  XCompUI.h  main.cpp
docs/: README.md
libs/DImage/: CMakeLists.txt  stdafx.h
libs/DImage/src/: Image.cpp  Image.h  ImageConv.cpp  ImageConv.h  ImageUtils.h  Image_DLS.cpp  Image_DLS.h  Image_DLS_LOS.cpp  Image_DLS_LOS.h  Image_DLS_LSS.cpp  Image_DLS_LSS.h  Image_EXR.cpp  Image_EXR.h  Image_JPEG.cpp  Image_JPEG.h  Image_PNG.h  Image_PNGLoad.cpp  Image_PNGSave.cpp  Image_RGBE.cpp  Image_RGBE.h  LOSLevelsCodec.h
libs/DMath/: CMakeLists.txt
libs/DMath/src/: DHalf.cpp  DHalf.h  DMT_DCT8.cpp  DMT_DCT8.h  DMT_Debug.cpp  DMT_Debug.h  DMT_Gradient1D.h  DMT_Spline.h  DMT_VecN.h  DMT_VecNMask.h  DMath.h  DMathBase.h  DMatrix33.h  DMatrix44.h  DMatrix44_XForms.h  DMatrixUtils.h  DNoise.cpp  DNoise.h  DQuat.h  DRandom.cpp  DRandom.h  DSPConvolve.h  DSPPack.h  DSPUtils.h  DVector.h  TransformA.h
libs/DNetwork/: CMakeLists.txt
libs/DNetwork/src/: DFunctionsList.h  DNET.cpp  DNET.h  DNETUT.cpp  DNETUT.h  DNET_Base.cpp  DNET_Base.h  DNET_Connecter.cpp  DNET_Connecter.h  DNET_HTTPFile.cpp  DNET_HTTPFile.h  DNET_Listener.cpp  DNET_Listener.h  DNET_PacketManager.cpp  DNET_PacketManager.h  DN_JSON.cpp  DN_JSON.h  DN_URIBuild.cpp  DN_URIBuild.h  NetSysBase.h  NetSysCMDL.cpp  NetSysCMDL.h  NetSysChan.cpp  NetSysChan.h  NetSysSock.cpp  NetSysSock.h  NetworkSystem.cpp  NetworkSystem.h
libs/DSystem/: CMakeLists.txt
libs/DSystem/src/: BSSerialize.h  ColorF.h  DArray.h  DAssert.cpp  DAssert.h  DBase.h  DCRC32.cpp  DCRC32.h  DContainers.h  DCriticalSection.h  DExceptions.cpp  DExceptions.h  DFreelistAtor.h  DFunctionsList.h  DLZ2.cpp  DLZ2.h  DLogOut.cpp  DLogOut.h  DMemPoolGrow.h  DMemSerialize.h  DSafeCrt.cpp  DSafeCrt.h  DSerialBase.h  DStateList.cpp  DStateList.h  DThreads.h  DUT_Files.cpp  DUT_Files.h  DUT_MemFile.cpp  DUT_MemFile.h  DUT_Str.cpp  DUT_Str.h  DVec2.h  DVecOwn.h  DataVec.h  FileUtils.cpp  FileUtils.h  SerializeJS.h  StringUtils.cpp  StringUtils.h  (+3 more)
libs/Graphics/: CMakeLists.txt
libs/Graphics/src/: DGLUtils.cpp  DGLUtils.h  FontBase.h  FontFix.cpp  FontFix.h  GShaderProg.cpp  GShaderProg.h  GWindowScoped.cpp  GWindowScoped.h  Graphics.cpp  Graphics.h  GraphicsApp.cpp  GraphicsApp.h  GraphicsUtils.cpp  GraphicsUtils.h  IMUI_EditableListBox.cpp  IMUI_EditableListBox.h  IMUI_InputTextNumFields.h  IMUI_Utils.cpp  IMUI_Utils.h  RenderTarget.cpp  RenderTarget.h  UILogger.cpp  UILogger.h  font_system_png.h
scripts/: manage_dependency_libraries.sh  release_macos.sh
